# custom_build_example

./: .gitignore  README.md
example/: CMakeLists.txt  build.sh
mygcc/: CMakeLists.txt  build.sh  main.cpp
