cmake_minimum_required (VERSION 3.13)
set(CMAKE_CXX_STANDARD 11)

set(PROJECT_NAME test)
project(${PROJECT_NAME})

SET(CMAKE_C_COMPILER ${CMAKE_SOURCE_DIR}/../bin/mygcc)
SET(CMAKE_CXX_COMPILER ${CMAKE_SOURCE_DIR}/../bin/mygcc)

set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/bin)
message("-- CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")

file(GLOB_RECURSE SRC_FILES temp/*.cpp)
add_executable(${PROJECT_NAME} ${SRC_FILES})
set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
install(TARGETS ${PROJECT_NAME} DESTINATION .)
